@@ -47,8 +47,8 @@ Examples
 //#define EMULATOR_VERSION "8.-RC"
 #define SNAPSHOT_VERSION
 
-#define EMULATOR_DATE "19 July 2019"
-#define EMULATOR_SHORT_DATE "19/07/2019"
+#define EMULATOR_DATE "24 July 2019"
+#define EMULATOR_SHORT_DATE "24/07/2019"
 #define EMULATOR_GAME_EDITION "xxx"
 #define EMULATOR_EDITION_NAME EMULATOR_GAME_EDITION " edition"
 
